2003-10-28  Jeff Johnston  <jjohnstn@redhat.com>
 
	* symfile.c (symbol_file_add_with_addrs_or_offsets): Switch to use
	printf_unfiltered instead of printf_filtered for output messages.
	(add_symbol_file_command): Ditto.
	(reread_symbols): Ditto.
	(overlay_auto_command): Ditto.
	(overlay_manual_command): Ditto.
	(overlay_off_command): Ditto.

2003-10-27  Mark Kettenis  <kettenis@gnu.org>

	* arch-utils.c (deprecated_select_gdbarch_hack): New function.
	(gdbarch_from_bfd): New function.
	(set_gdbarch_from_file): Re-implement using gdbarch_from_bfd and
	deprecated_select_gdbarch_hack.
	* arch-utils.h (gdbarch_from_bfd): New prototype.

2003-10-27  Andrew Cagney  <cagney@redhat.com>

	* osabi.c (gdbarch_init_osabi): Use info.bfd_arch_info instead of
	arch_info.  Use warning instead of fprintf_filtered.  Do not use
	deprecated bfd_printable_arch_mach.

2003-10-26  Kevin Buettner  <kevinb@redhat.com>

	* frv-tdep.c (frv_register_raw_size, frv_register_virtual_size):
	Delete.
	(frv_register_type): Rename from frv_register_virtual_type.  Add
	``struct gdbarch *'' parameter.
	(frv_gdbarch_init): Delete calls to the following functions:
	set_gdbarch_deprecated_size(),
	set_gdbarch_deprecated_register_bytes(),
	set_gdbarch_deprecated_register_raw_size(),
	set_gdbarch_deprecated_max_register_raw_size(),
	set_gdbarch_deprecated_register_virtual_size(),
	set_gdbarch_deprecated_max_register_virtual_size(),
	set_gdbarch_deprecated_register_virtual_size(),
	set_gdbarch_deprecated_register_virtual_type().
	Add call to function set_gdbarch_register_type().

2003-10-26  Mark Kettenis  <kettenis@gnu.org>

	* i386-tdep.h (FCS_REGNUM, FCOFF_REGNUM, FDS_REGNUM,
	FDOFF_REGNUM): Remove defines.
	* win32-nat.c (do_child_fetch_inferior_registers): Include
	"i387-tdep.h".
	(do_child_fetch_inferior_registers): Use I387_FISEG_REGNUM and
	I387_FOP_REGNUM instead of FCS_REGNUM and FOP_REGNUM.  Define and
	undefine I387_ST0_REGNUM.

	* i386-tdep.h (FPU_REG_RAW_SIZE): Remove define.